--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root{
+  --color-bg-dark: #f5f5f5;
+  --color-bg: #fdfffd;
+  --color-grey: #d1d1d1;
+  --color-text: #22243b;
+  --color-accent: #f16e03;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +14,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(55,89,153);
+  background: linear-gradient(180deg, rgba(55,89,153,1) 52%, rgba(112,151,223,1) 100%);;
+}
+
+#root{
+  width: 100%;
+  height: 60%;
+  max-width: 500px;
+  background-color: var(--color-bg-dark);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: -13px 10px 5px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: -13px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: -13px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 code {
