--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --color-grey: #d1d1d1;
   --color-text: #22243b;
   --color-accent: #f16e03;
+  --color-white : white;
+  --color-scrollbar: #aaa7a7;
 
 }
 
@@ -19,6 +21,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.2rem;
+  accent-color: var(--color-accent);
   background: rgb(55,89,153);
   background: linear-gradient(180deg, rgba(55,89,153,1) 52%, rgba(112,151,223,1) 100%);;
 }
@@ -28,6 +32,7 @@ body {
   height: 60%;
   max-width: 500px;
   background-color: var(--color-bg-dark);
+  overflow: hidden;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -39,4 +44,33 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*{
+  box-sizing: border-box;
+}
+
+ul{
+  list-style: none;
+  padding-left: 0;
+}
+
+button{
+  outline: none;
+  border: none;
+}
+
+::-webkit-scrollbar{
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track{
+  background-color: var(--color-bg-dark);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--color-scrollbar);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--color-accent);
 }
