--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,7 @@
 .header{
     display: flex;
     justify-content: space-between;
+    padding: 0 0.5rem;
     align-items: center;
     background-color: var(--color-bg-dark);
     border-bottom: 1px solid var(--color-gery);
@@ -32,4 +33,16 @@
     display: block;
     margin-top: 0.2rem;
     border: 1px solid var(--color-text);
+}
+
+.toggle{
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: var(--color-text);
+    cursor: pointer;
+    transition: all 150ms ease-out;
+}
+.toggle:hover{
+    transform: scale(1.1);
+    color: var(--color-accent);
 }
